refactor: extract methods, use records and switch expressions for clarity
Break up long methods across services and schedulers to improve
readability without changing behavior.

- CoverUpdateNotifierService: extract S3 upload orchestration into
  focused helpers; replace if-else error classification with pattern-
  matching switch expression
- BookExternalBatchPersistenceService: introduce BatchResult and
  PersistenceOutcome records; extract extractDedupeKey() and
  isInvalidBook(); use HashSet.newHashSet() sized constructor
- HomePageSectionsService: extract fetchAndMapSimilarBooks(),
  mapCardsToBooks(), applyCoverPrioritization() from nested lambdas
- NewYorkTimesService: extract fetchAndSortBookCards(),
  buildInsertionOrder(), mapFetchError(); fail-fast on null repository
- NewYorkTimesBestsellerScheduler: split persistListEntry() into
  resolveOrCreateCanonicalBook(), calculatePeakPosition(),
  serializeBookNode(); migrate asText→asString with emptyToNull guard
- PostgresBookSectionHydrator: add queryStringList() to deduplicate
  author/category queries; extract parseJson(); rename constant to
  UNPOSITIONED_SORT_ORDER with expanded javadoc
- SearchPageHealthIndicator: replace volatile delegate with AtomicReference
- ErrorDiagnosticsController: extract populateErrorModel(); use
  ApplicationConstants.Urls.BASE_URL
- ResolveController: use ObjectProvider for optional BackfillCoordinator
- S3BookCoverService: convert ProcessedCoverUploadRequest from record
  to class for correct byte[] equality/hashCode semantics
- S3EnvironmentCondition: extract STATUS_MISSING/SET constants; remove
  emoji from log messages
- S3CoverObjectLookupSupport: add structured logger; use unnamed
  exception variable for NoSuchKeyException